unpackaged/main/default/objects/Assignment_Group_Name__c/Assignment_Group_Name__c.object-meta.xml
<CustomObject>
    <label>zz Assignment Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>zz Assignment Groups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>