unpackaged/main/default/objects/Assignment_Group_Name__c/fields/DSM_Override__c.field-meta.xml
<CustomField>
    <fullName>DSM_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if need to override case assignment round robin with the Dedicated Success Manager. Created from R164700 enhancement where we do not want the DSM to be assigned in some cases.</description>
    <label>DSM Override</label>
    <type>Checkbox</type>
</CustomField>