unpackaged/main/default/objects/Assignment_Group_Name__c/fields/Ignore_Min_Units__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Min_Units__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected RR processing will ignore the Min Units assigned on the group members records</inlineHelpText>
    <label>Ignore Min Units</label>
    <type>Checkbox</type>
</CustomField>