unpackaged/main/default/objects/Assignment_Group_Name__c/fields/Last_Group_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Last_Group_Assignment__c</fullName>
    <description>Rollup to show the most recent assignment date for members of the group</description>
    <label>Last Group Assignment</label>
    <summarizedField>Assignment_Groups__c.Last_Assignment__c</summarizedField>
    <summaryForeignKey>Assignment_Groups__c.Group_Name__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>