unpackaged/main/default/objects/Assignment_Group_Name__c/fields/Legacy_CreatedById__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legacy CreatedById</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignment_Group_Name_s101</relationshipName>
    <type>Lookup</type>
</CustomField>