unpackaged/main/default/objects/Assignment_Group_Name__c/fields/Legacy_LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>Legacy_LastModifiedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legacy LastModifiedById</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignment_Group_Name_s102</relationshipName>
    <type>Lookup</type>
</CustomField>