unpackaged/main/default/objects/Assignment_Group_Name__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cases</fullName>
                <default>true</default>
                <label>Cases</label>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>Value+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>